add login buttons and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="/public/favicon.ico"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&family=Raleway:wght@400;500;600;800&display=swap"
       rel="stylesheet"
     />
-    <title>CryptoVortex</title>
+    <title>CryptoVortex - Buy & sell crypto currencies</title>
   </head>
   <body>
     <div id="root"></div>
